Grabbing audio from the youtubes

--- a/MusicRotatoe/MusicRotatoe/packages.config
+++ b/MusicRotatoe/MusicRotatoe/packages.config
@@ -26,5 +26,6 @@
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="VideoLibrary" version="1.3.4" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.168" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="YoutubeExtractor" version="0.10.11" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
